# bin2fasta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
bin2fasta/: main.py
bin2fasta/tests/: test_all.py
