[tool.poetry]
name = "bin2fasta"
version = "0.0.2"
description = "Store any file as a fasta file"

authors = ["kpj <kpjkpjkpjkpjkpjkpj@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/kpj/bin2fasta"


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
tqdm = "^4.28"


[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = "^20.8b1"


[tool.poetry.scripts]
bin2fasta = 'bin2fasta:main'


[tool.black]
skip_string_normalization = true
